ProductController: Se agregó el modelo de categoría en el index
