# openapi.yaml
@@ -101,6 +101,9 @@ components:
           type: integer
         category:
           type: integer
+        categoryM:
+          type: object
+          $ref: "#/components/schemas/CategoryModel"
       example:
         id: 1
         name: ENERGETICA MR BIG
@@ -108,6 +111,9 @@ components:
         price: 1490
         discount: 20
         category: 1
+        categoryM:
+          id: 1
+          name: categoria
   parameters:
     FilterParam:
       name: filters
